🚧 Basic annotation page
